package v1

import (
	"context"
	pb "go-nexus/internal/api/proto" // å¼•å…¥ç”Ÿæˆçš„ proto
	"go-nexus/internal/core"         // å¼•å…¥ AIClient
	"go-nexus/pkg/response"
	"time"

	"github.com/gin-gonic/gin"
)

// AISearchReq æœç´¢è¯·æ±‚å‚æ•°
type AISearchReq struct {
	Query    string `json:"query" form:"query" binding:"required"`         // ç”¨æˆ·é—®ä»€ä¹ˆ
	TargetID uint   `json:"target_id" form:"target_id" binding:"required"` //æ­£åœ¨è·Ÿè°èŠ
	ChatType int    `json:"chat_type" form:"chat_type" binding:"required"` //ç¾¤èŠ or å•èŠ
}

// SemanticSearch è¯­ä¹‰æœç´¢/é—®ç­”æ¥å£
func SemanticSearch(c *gin.Context) {
	var req AISearchReq
	// æ”¯æŒ GET Query æˆ– POST JSON
	if err := c.ShouldBind(&req); err != nil {
		response.Fail(c, response.ErrParamInvalid)
		return
	}
	userID := c.MustGet("userID").(uint)
	//è®¡ç®—å½“å‰çª—å£çš„SessionID
	sessionID := core.GetSessionID(req.ChatType, userID, req.TargetID)
	// è°ƒç”¨ gRPC (è®¾ç½® 10ç§’è¶…æ—¶ï¼Œå› ä¸º AI æ€è€ƒæ¯”è¾ƒæ…¢)
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	// æ ¸å¿ƒï¼šGo è°ƒ Python
	resp, err := core.AIClient.SemanticSearch(ctx, &pb.SearchRequest{
		Query:     req.Query,
		Limit:     3,         // æœå‰3æ¡ç›¸å…³è®°å½•
		SessionId: sessionID, // ğŸ”¥ å‘Šè¯‰ AIï¼šåªåœ¨è¿™ä¸ªæˆ¿é—´é‡Œæœï¼
	})

	if err != nil {
		response.FailWithMessage(c, response.ErrSystemError, "AI æœåŠ¡æš‚æ—¶ä¸å¯ç”¨: "+err.Error())
		return
	}

	// ç›´æ¥è¿”å› AI çš„å›ç­”
	response.Success(c, gin.H{
		"answer": resp.Answer,
	})
}
