package socket

import (
	"encoding/json"
	"github.com/gin-gonic/gin"
	"github.com/gorilla/websocket"
	"go-nexus/internal/core"
	"go-nexus/internal/model/dto"
	"go-nexus/pkg/utils"
	"log"
	"net/http"
	"strconv"
	"time"
)

// --- é…ç½®å¸¸é‡ (å¤è¯•è€ƒç‚¹ï¼šç³»ç»Ÿè°ƒä¼˜) ---
const (
	// å†™è¶…æ—¶æ—¶é—´
	writeWait = 10 * time.Second
	// è¯»è¶…æ—¶æ—¶é—´ (å¿ƒè·³é—´éš”)
	// å¦‚æœ 60ç§’ æ²¡æ”¶åˆ°å®¢æˆ·ç«¯çš„ Pongï¼Œå°±è®¤ä¸ºå®ƒæ–­äº†
	pongWait = 60 * time.Second
	// å‘é€ Ping çš„é—´éš” (å¿…é¡»å°äº pongWait)
	pingPeriod = (pongWait * 9) / 10
	// æœ€å¤§æ¶ˆæ¯å¤§å° (é˜²æ­¢æ¶æ„å‘å¤§åŒ…æŠŠæœåŠ¡å™¨å†…å­˜æ’‘çˆ†)
	maxMessageSize = 5120 // 5KB
)

// Client ä»£è¡¨ä¸€ä¸ª WebSocket è¿æ¥ç”¨æˆ·
type Client struct {
	ID     uint            // ç”¨æˆ·ID
	Socket *websocket.Conn // å…·ä½“çš„åº•å±‚è¿æ¥
	Send   chan []byte     // å¾…å‘é€æ¶ˆæ¯çš„ç¼“å†²é€šé“ (Outbound)
}

var handlers = map[int]MsgHandler{
	dto.ChatTypePrivate: &PrivateHandler{},
	dto.ChatTypeGroup:   &GroupHandler{},
	dto.ChatTypeSystem:  &SystemHandler{},
}

// --------------------------------------------------------------------------------
// 1. ReadPump: è¯»æ³µ (åªç®¡ä» Socket è¯»ï¼Œç„¶åæ‰”ç»™åç«¯å¤„ç†)
// --------------------------------------------------------------------------------
func (c *Client) ReadPump() {
	// ç¡®ä¿å‡½æ•°é€€å‡ºæ—¶å…³é—­è¿æ¥å¹¶æ³¨é”€
	defer func() {
		Manager.Unregister <- c
		c.Socket.Close()
	}()

	// é…ç½® Socket å‚æ•°
	c.Socket.SetReadLimit(maxMessageSize)
	c.Socket.SetReadDeadline(time.Now().Add(pongWait)) // è®¾ç½®è¯»å–æ­»çº¿

	// è®¾ç½® Pong å¤„ç†å™¨ï¼šæ”¶åˆ°å®¢æˆ·ç«¯çš„ Pong åï¼Œå»¶é•¿æ­»çº¿
	c.Socket.SetPongHandler(func(string) error {
		c.Socket.SetReadDeadline(time.Now().Add(pongWait))
		return nil
	})

	for {
		// 1. é˜»å¡è¯»å–æ¶ˆæ¯
		_, message, err := c.Socket.ReadMessage()
		if err != nil {
			// å¦‚æœè¯»å‡ºé”™äº†ï¼ˆæ¯”å¦‚å®¢æˆ·ç«¯å¼ºé€€ï¼‰ï¼Œè·³å‡ºå¾ªç¯ï¼Œè§¦å‘ defer é”€æ¯è¿æ¥
			if websocket.IsUnexpectedCloseError(err, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
				log.Printf("error: %v", err)
			}
			break
		}

		// 2. è§£æ JSON åè®®
		var proto dto.ProtocolMsg
		if err := json.Unmarshal(message, &proto); err != nil {
			log.Printf("Jsonè§£æé”™è¯¯: %v", err)
			continue // æ ¼å¼ä¸å¯¹ï¼Œå¿½ç•¥è¿™æ¡ï¼Œç»§ç»­è¯»ä¸‹ä¸€æ¡
		}

		// 3. å¤„ç†å¿ƒè·³ (Type=0)
		// å®é™…ä¸Šæœ‰äº† SetPongHandlerï¼Œè¿™é‡Œçš„ä¸šåŠ¡å±‚å¿ƒè·³å¯ä»¥ç®€åŒ–ï¼Œæˆ–è€…ç”¨äºå‰ç«¯ä¸šåŠ¡é€»è¾‘ä¿æ´»
		if proto.Type == dto.TypeHeartbeat {
			continue
		}

		// ==========================================
		// ğŸ”¥ [æ ¸å¿ƒä»£ç ]ï¼šå°†æ¶ˆæ¯æŠ•å–‚ç»™ AI
		// ==========================================
		// åªæœ‰æ–‡æœ¬æ¶ˆæ¯æ‰å­˜ RAGï¼Œå›¾ç‰‡/è¯­éŸ³æš‚æ—¶ä¸å­˜
		if proto.Type == dto.TypeText {
			// ç”Ÿæˆä¸€ä¸ªç®€å•çš„å”¯ä¸€ID (å®é™…é¡¹ç›®å¯ä»¥ç”¨ UUID)
			msgID := strconv.FormatInt(time.Now().UnixNano(), 10)
			nickname := proto.SenderNickname
			//è®¡ç®—SessionID
			sessionID := core.GetSessionID(proto.ChatType, c.ID, proto.ToUserID)
			// å¼‚æ­¥å‘é€ (go func)ï¼Œç»å¯¹ä¸èƒ½é˜»å¡èŠå¤©ä¸»çº¿ç¨‹ï¼
			core.AsyncSyncMessage(c.ID, proto.Content, msgID, nickname, sessionID)
		}
		// 4. ã€å®‰å…¨å…³é”®ã€‘å¼ºåˆ¶ç»‘å®šå‘é€è€… ID
		// æ— è®ºå‰ç«¯ä¼ ä»€ä¹ˆ from_user_idï¼Œéƒ½è¦†ç›–ä¸ºå½“å‰è¿æ¥çš„ ID
		// é˜²æ­¢é»‘å®¢æ‹¿ A çš„ Token è¿ä¸Šæ¥ï¼Œå´å‘åŒ…è¯´è‡ªå·±æ˜¯ B
		proto.FromUserID = c.ID

		//2.ç­–ç•¥åˆ†å‘
		worker, ok := handlers[proto.ChatType]
		if !ok {
			log.Printf("æœªçŸ¥çš„èŠå¤©ç±»å‹ï¼š: %v", proto.ChatType)
			continue
		}
		if err := worker.Handle(&proto); err != nil {
			log.Printf("æ¶ˆæ¯å¤„ç†å‡ºé”™: %v", err)
		}
	}
}

// --------------------------------------------------------------------------------
// 2. WritePump: å†™æ³µ (åªç®¡æŠŠ Send é€šé“é‡Œçš„æ•°æ®å†™ç»™ Socket)
// --------------------------------------------------------------------------------
func (c *Client) WritePump() {
	// å®šæ—¶å™¨ï¼šæ¯éš” 54ç§’ ç»™å‰ç«¯å‘ä¸€ä¸ª Ping
	ticker := time.NewTicker(pingPeriod)

	defer func() {
		ticker.Stop()
		c.Socket.Close()
	}()

	for {
		select {
		// A. ä¸šåŠ¡æ¶ˆæ¯ï¼šSend é€šé“æœ‰æ•°æ®äº†
		case message, ok := <-c.Send:
			// è®¾ç½®å†™å…¥è¶…æ—¶
			c.Socket.SetWriteDeadline(time.Now().Add(writeWait))
			if !ok {
				// é€šé“è¢« Manager å…³é—­äº† (æ¯”å¦‚è¸¢äººä¸‹çº¿)
				c.Socket.WriteMessage(websocket.CloseMessage, []byte{})
				return
			}

			// è·å– Writer å¯¹è±¡
			w, err := c.Socket.NextWriter(websocket.TextMessage)
			if err != nil {
				return
			}
			// å†™å…¥æ•°æ®
			w.Write(message)

			// ä¼˜åŒ–ï¼šå¦‚æœä½ è¿ç€å‘äº† 10 æ¡æ¶ˆæ¯ï¼ŒSend é€šé“é‡Œç§¯å‹äº† 10 æ¡
			// è¿™é‡Œä¼šä¸€æ¬¡æ€§æŠŠç¼“å†²åŒºçš„éƒ½æ‹¿å‡ºæ¥ï¼Œåˆå¹¶æˆä¸€ä¸ª TCP åŒ…å‘å‡ºå»ï¼Œå‡å°‘ç½‘ç»œ IO
			n := len(c.Send)
			for i := 0; i < n; i++ {
				w.Write(<-c.Send)
			}

			if err := w.Close(); err != nil {
				return
			}

		// B. å¿ƒè·³ä¿æ´»ï¼šå®šæ—¶å™¨è§¦å‘
		case <-ticker.C:
			c.Socket.SetWriteDeadline(time.Now().Add(writeWait))
			// å‘é€ Ping å¸§ (Control Frame)ï¼Œå‰ç«¯æµè§ˆå™¨ä¼šè‡ªåŠ¨å›å¤ Pongï¼Œä¸éœ€è¦å‰ç«¯å†™ä»£ç å¤„ç†
			if err := c.Socket.WriteMessage(websocket.PingMessage, nil); err != nil {
				return
			}
		}
	}
}

// --------------------------------------------------------------------------------
// 3. HTTP å‡çº§å…¥å£
// --------------------------------------------------------------------------------

var upgrader = websocket.Upgrader{
	ReadBufferSize:  1024,
	WriteBufferSize: 1024,
	// å…è®¸è·¨åŸŸ (å¿…åŠ ï¼å¦åˆ™å‰ç«¯ Vue è¿ä¸ä¸Š)
	CheckOrigin: func(r *http.Request) bool {
		return true
	},
}

// ConnectWebSocket å¤„ç† WebSocket è¿æ¥è¯·æ±‚
func ConnectWebSocket(c *gin.Context) {
	// 1. è·å– Token
	token := c.Query("token")
	if token == "" {
		// ä¸ºäº†è°ƒè¯•æ–¹ä¾¿ï¼Œæœ‰æ—¶ä¹Ÿå…è®¸ header ä¼ 
		token = c.GetHeader("sec-websocket-protocol")
	}

	// 2. é‰´æƒ
	claims, err := utils.ParseToken(token)
	if err != nil {
		c.JSON(http.StatusUnauthorized, gin.H{"msg": "é‰´æƒå¤±è´¥"})
		return
	}

	// 3. å‡çº§ HTTP -> WebSocket
	// responseHeader ä¼  nil
	conn, err := upgrader.Upgrade(c.Writer, c.Request, nil)
	if err != nil {
		log.Printf("å‡çº§å¤±è´¥: %v", err)
		return
	}

	// 4. åˆå§‹åŒ– Client å®ä¾‹
	client := &Client{
		ID:     claims.UserID,
		Socket: conn,
		Send:   make(chan []byte, 256), // å¸¦ç¼“å†²é€šé“ï¼Œé˜²æ­¢å‘é€æ–¹é˜»å¡
	}

	// 5. æ³¨å†Œåˆ°ç®¡ç†å™¨
	Manager.Register <- client

	// 6. å¯åŠ¨åŒå·¥åç¨‹
	// ä¸€ä¸ªè´Ÿè´£è¯»ï¼Œä¸€ä¸ªè´Ÿè´£å†™ï¼Œäº’ä¸é˜»å¡
	go client.ReadPump()
	go client.WritePump()
}
